--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
-  "name": "application-name",
+  "name": "bootandbonnet",
   "version": "0.0.1",
   "private": true,
   "scripts": {
     "start": "node app"
   },
   "dependencies": {
-    "express": "3.1.0",
-    "jade": "*"
+    "express": "3.1.x",
+    "ejs": "0.8.x",
+    "ejs-locals": "1.0.x",
+    "mysql": "2.0.x",
+    "bcrypt": "0.7.x"
   }
 }
