We can now write a dealership to the database as well. We added the async module as a dependency. We use its asynchronous container methods like forEach.

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "ejs": "0.8.x",
     "ejs-locals": "1.0.x",
     "mysql": "2.0.x",
-    "bcrypt": "0.7.x"
+    "bcrypt": "0.7.x",
+    "async": "0.2.x"
   }
 }
