The users.js route was separated out into the users.js, sellers.js, dealerships.js and locations.js routes. Each route is responsible for managing the operations on the database table with the same name, and for displaying pages related to that table. After a seller regsiters, he is directed to the seller.ejs profile page. The My Account menu item has been changes into a dropdown menu. The only item on it so far is the Log out item, which works.

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "ejs-locals": "1.0.x",
     "mysql": "2.0.x",
     "bcrypt": "0.7.x",
-    "async": "0.2.x"
+    "async": "0.2.x",
+    "sanitizer": "0.0.x"
   }
 }
