--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "express": "3.1.x",
     "ejs": "0.8.x",
     "ejs-locals": "1.0.x",
-    "mysql": "2.0.x",
-    "bcrypt": "0.7.x",
+    "mysql": "~2.0.0-alpha7",
+    "bcrypt": "~0.7.x",
     "async": "0.2.x",
     "sanitizer": "0.0.x",
     "emailjs": "~0.3.4"
