Users and private sellers can now be written to the MongoDB database. Not yet dealerships.

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bcrypt": "~0.7.x",
     "async": "0.2.x",
     "sanitizer": "0.0.x",
-    "emailjs": "~0.3.4"
+    "emailjs": "~0.3.4",
+    "mongoose": "~3.6.11"
   }
 }
