--- a/package.json
+++ b/package.json
@@ -6,14 +6,14 @@
     "start": "node app"
   },
   "dependencies": {
-    "express": "3.1.x",
-    "ejs": "0.8.x",
+    "express": "~3.1.2",
+    "ejs": "~0.8.4",
     "ejs-locals": "1.0.x",
     "mysql": "~2.0.0-alpha7",
-    "bcrypt": "~0.7.x",
+    "bcrypt": "~0.7.6",
     "async": "0.2.x",
     "sanitizer": "0.0.x",
     "emailjs": "~0.3.4",
-    "mongoose": "~3.6.11"
+    "mongoose": "~3.6.12"
   }
 }
