--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "async": "0.2.x",
     "sanitizer": "0.0.x",
     "emailjs": "~0.3.4",
-    "mongoose": "~3.6.12",
-    "paypal-rest-sdk": "~0.6.4"
+    "mongoose": "~3.6.12"
   }
 }
