--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
-  "name": "bootandbonnet",
+  "name": "cardog",
   "version": "0.0.1",
   "private": true,
   "scripts": {
     "start": "node app"
   },
   "dependencies": {
-    "express": "~3.1.2",
-    "ejs": "~0.8.4",
-    "ejs-locals": "1.0.x",
-    "mysql": "~2.0.0-alpha7",
-    "bcrypt": "~0.7.6",
-    "async": "0.2.x",
-    "sanitizer": "0.0.x",
-    "emailjs": "~0.3.4",
-    "mongoose": "~3.6.12"
+    "express": "~3.4.4",
+    "ejs": "~0.8.5",
+    "ejs-locals": "*",
+    "mysql": "~2.0.0-alpha9",
+    "bcrypt": "~0.7.7",
+    "async": "~0.2.9",
+    "sanitizer": "~0.0.15",
+    "emailjs": "~0.3.6",
+    "mongoose": "~3.8.1"
   }
 }
