--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cardog",
+  "name": "bootandbonnet",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -10,7 +10,7 @@
     "ejs": "~0.8.5",
     "ejs-locals": "*",
     "mysql": "~2.0.0-alpha9",
-    "bcrypt": "~0.7.7",
+    "bcrypt": "*",
     "async": "~0.2.9",
     "sanitizer": "~0.0.15",
     "emailjs": "~0.3.6",
